src/styles/style.css
/* CSS Custom Properties Definitions */

@import "./scrollbar.css";

@import "./animation.css";

@import "./mix-blend.css";

@import "./cursor.css";

@import "./arrow.css";

/* HTML elements */
@layer base {
  *,
  ::before,
  ::after {
    box-sizing: content-box;
    @screen sm {
      cursor: none;
    }
  }

  html {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow-y: scroll;
  }

  body {
    font-family: Jost, 'Noto Serif JP', serif;
    font-feature-settings: "palt";
    @apply text-gray-900 bg-neumorphism;
  }

  /* purgecss ignore */
  .gatsby-resp-image-figcaption {
    text-align: center;
  }
}

@layer components {
  .container {
    margin-right: auto;
    margin-left: auto;
    width: calc(100vw - 2rem);
    @screen sm {
      width: calc(100vw - 4rem);
    }
    @screen md {
      width: calc(100vw - 10rem);
    }
    @screen lg {
      width: calc(100vw - 12rem);
    }
    @screen xl {
      width: 1280px;
    }
  }

  .main-article-width {
    width: calc(100% - 3rem);
    @screen sm {
      width: calc(100% - 4rem);
    }
    @screen md {
      width: calc(100% - 5rem);
    }
    @screen lg {
      width: calc(100% - 6rem);
    }
    @screen xl {
      width: calc(100% - 7rem);
    }
  }

  .scroll-down{
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translate(-50%,-50%);
  }
  .scroll-down span{
      display: block;
      width: 30px;
      height: 30px;
      border-bottom: 5px solid theme('colors.yowai');
      border-right: 5px solid theme('colors.yowai');
      transform: rotate(45deg);
      margin: -10px;
      animation: animate 2s infinite;
  }
  .scroll-down span:nth-child(2){
      animation-delay: -0.2s;
  }
  .scroll-down span:nth-child(3){
      animation-delay: -0.4s;
  }
  @keyframes animate {
      0%{
          opacity: 0;
          transform: rotate(45deg) translate(-20px,-20px);
      }
      50%{
          opacity: 1;
      }
      100%{
          opacity: 0;
          transform: rotate(45deg) translate(20px,20px);
      }
  }
}

@layer utilities {
  .border-3 {
    border-width: 3px;
  }

  .outline {
    -webkit-text-stroke: 1px black;
    -webkit-text-fill-color: white;
  }


  .neumorphism-deep {
    box-shadow: 9px 9px 16px rgba(163, 177, 198, 0.6),
      -9px -9px 16px rgba(255, 255, 255, 0.5),
      inset 3px 3px 7px rgba(136, 165, 191, 0.48),
      inset -3px -3px 7px #FFFFFF;
    background: linear-gradient(318.32deg, rgba(163, 177, 198, 0.1) 0%, rgba(163, 177, 198, 0.1) 55%, rgba(163, 177, 198, 0.25) 100%);
  }

  .neumorphism-inset {
    box-shadow: inset 3px 3px 7px rgba(136, 165, 191, 0.48), inset -3px -3px 7px #FFFFFF;
  }

  .neumorphism-normal {
    box-shadow: 9px 9px 16px rgba(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
  }


  .cursor-none { cursor: none !important; }

  .xl-text {
    font-size: 1.25rem;
  }
  .column-count-none {
    column-count: unset;
  }
  .column-count-2 {
    column-count: 2;
  }
  .column-gap-12 {
    column-gap: 3rem;
  }
  .leading-relaxed {
    line-height: 1.625 !important;
  }
  .leading-loosest {
    line-height: 2 !important;
  }
  .mandatory-scroll-snapping {
    scroll-snap-type: y mandatory;
  }
  .scroll-snap-center {
    scroll-snap-align: center;
  }
  .scrolling-touch {
    -webkit-overflow-scrolling: touch;
  }
}

